--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,13 @@
 *.ilk
 *.lastbuildstate
 vc100.pdb
+vc120.pdb
 ipch
 *.sdf
 *.opensdf
 *.idb
 *.vcxproj
+*.vpc_crc
 *.sln
 
 # OSX/Linux build products
